lib/precedent/grammar/document.treetop
# encoding: UTF-8

module Precedent
  grammar Document
    include Paragraph
    include Heading
    include Meta

    rule root
      block_end? meta:meta? content:block+
      {
        def build
          c = content.build
          m = meta.build
          if m
            [m] + c
          else
            c
          end
        end
      }
    end

    rule block
      # Note the use of the content label in reliance upon the generic
      # #build() implementation in node_patch.rb.
      content:(comment / heading / paragraph) block_end
    end

    rule block_end
      blank_lines / eof
    end

    rule comment
      "%" content:[^\n]+
      {
        def build
          { :type => :comment,
            :content => content.text_value }
        end
      }
    end

    rule blank_lines
      ' '* "\n"+
    end

    rule eof
      !.
    end
  end
end
